--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -293,6 +293,7 @@
                                 android:layout_marginTop="4dp"
                                 android:layout_marginBottom="15dp"
                                 android:text="Reserve Now"
+                                android:id="@+id/book_now_button"
                                 android:background="@drawable/button_background_orange"
                                 android:fontFamily="@font/raleway"
                                 android:textStyle="bold"
