--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,6 +27,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+       <RelativeLayout
+           android:id="@+id/progressBarLayout"
+           android:layout_centerInParent="true"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content">
+
+           <ProgressBar
+               android:id="@+id/progressBar"
+               android:indeterminateTint="@color/colorPrimary"
+               android:layout_width="20dp"
+               android:layout_height="20dp" />
+
+       </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/main_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="wrap_content"
             android:textSize="19sp"
@@ -121,6 +140,7 @@
             android:background="@drawable/button_background_orange_light"
             android:layout_height="60dp" />
 
+    </RelativeLayout>
     </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
