New features added

--- a/app/src/main/res/layout/activity_restaurant_view.xml
+++ b/app/src/main/res/layout/activity_restaurant_view.xml
@@ -25,7 +25,18 @@
                             android:id="@+id/app_bar"
                             android:layout_width="match_parent"
                             android:layout_height="250dp"
+                            android:background="@android:color/transparent"
                             android:theme="@style/AppTheme.AppBarOverlay">
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
+                            <ProgressBar
+                                android:layout_width="15dp"
+                                android:indeterminateTint="@color/colorPrimary"
+                                android:id="@+id/images_progress_bar"
+                                android:layout_centerInParent="true"
+                                android:layout_height="15sp" />
+
                             <android.support.v7.widget.RecyclerView
                                 android:nestedScrollingEnabled="false"
                                     android:id="@+id/restaurant_images"
@@ -34,6 +45,8 @@
 
 
                                 </android.support.v7.widget.RecyclerView>
+                            </RelativeLayout>
+
                         </android.support.design.widget.AppBarLayout>
 
 
@@ -43,16 +56,4 @@
 
     </android.support.v4.widget.NestedScrollView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:background="#fff"
-        app:backgroundTint="#fff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:borderWidth="0dp"
-        app:rippleColor="@color/colorPrimary"
-        app:fabSize="normal"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_book_now" />
 </android.support.design.widget.CoordinatorLayout>
