--- a/app/src/main/res/layout/layout_search_restaurant_snippet.xml
+++ b/app/src/main/res/layout/layout_search_restaurant_snippet.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView app:cardCornerRadius="4dp"
-    app:cardElevation="3dp"
-    android:layout_margin="10dp"
+    app:cardElevation="2dp"
+    android:layout_margin="5dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="240dp"
@@ -48,6 +48,7 @@
             android:rating="4"
             android:layout_marginTop="3dp"
             android:layout_marginStart="5dp"
+            android:isIndicator="true"
             android:layout_below="@id/restaurant_location"
             android:id="@+id/restaurant_rating"
             style="@style/Widget.AppCompat.RatingBar.Small"
