--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,5 +50,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="PopupAnimation">
+        <item name="android:windowEnterAnimation">
+            @android:anim/slide_in_left</item>
+        <item name="android:windowExitAnimation">
+            @android:anim/slide_out_right</item>
+    </style>
+
 
 </resources>
