--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -7,6 +7,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ProgressBar
+            android:layout_width="20dp"
+            android:indeterminateTint="@color/colorPrimary"
+            android:id="@+id/progressBar"
+            android:layout_centerInParent="true"
+            android:layout_height="20dp" />
+
+        <RelativeLayout
+            android:id="@+id/main_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:id="@+id/toolbar_layout"
@@ -68,7 +80,6 @@
                     android:hint="Old Password"
                     android:textColor="#363636"
                     android:textColorHint="#363636"
-                    android:text="Chethan@12345"
                     android:textStyle="bold"
                     android:fontFamily="@font/raleway"
                     android:theme="@style/EditTextTheme"
@@ -90,7 +101,6 @@
                     android:id="@+id/new_password"
                     android:inputType="textPassword"
                     android:hint="New Password"
-                    android:text="Chethan123"
                     android:textColor="#363636"
                     android:textColorHint="#363636"
                     android:textStyle="bold"
@@ -115,7 +125,6 @@
                     android:inputType="textPassword"
                     android:hint="Confirm Password"
                     android:textColor="#363636"
-                    android:text="Chethan@123"
                     android:textColorHint="#363636"
                     android:textStyle="bold"
                     android:fontFamily="@font/raleway"
@@ -126,6 +135,7 @@
 
         </RelativeLayout>
 
+    </RelativeLayout>
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
