--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -17,6 +17,13 @@
             android:layout_centerInParent="true"
             android:layout_height="20dp" />
 
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
         <RelativeLayout
             android:elevation="3dp"
             android:background="#fff"
@@ -48,10 +55,33 @@
 
         </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_below="@id/toolbar_layout"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/background_chip"
+            android:id="@+id/filter_type_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_margin="5dp"
+                android:textColor="#363636"
+                android:id="@+id/filter_type"
+                android:fontFamily="@font/raleway"
+                android:text="Filter Type: All "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
 <android.support.v7.widget.RecyclerView
+    android:nestedScrollingEnabled="false"
     android:layout_width="match_parent"
-    android:layout_below="@id/toolbar_layout"
+    android:layout_below="@id/filter_type_layout"
     android:layout_marginStart="5dp"
+    android:layout_marginTop="5dp"
     android:layout_marginEnd="5dp"
     android:id="@+id/searchRecyclerView"
     android:layout_height="wrap_content">
@@ -59,6 +89,9 @@
 
 
 </android.support.v7.widget.RecyclerView>
+
+            </RelativeLayout>
+        </android.support.v4.widget.NestedScrollView>
 
     </RelativeLayout>
 
