--- a/app/src/main/res/layout/layout_search_restaurant_snippet.xml
+++ b/app/src/main/res/layout/layout_search_restaurant_snippet.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView app:cardCornerRadius="4dp"
     app:cardElevation="2dp"
-    android:layout_margin="5dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="240dp"
+    android:layout_width="wrap_content"
+    android:layout_height="270dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
@@ -16,12 +19,12 @@
             android:scaleType="fitXY"
             android:id="@+id/restaurant_image"
             android:src="@mipmap/restro20"
-            android:layout_height="130dp" />
+            android:layout_height="180dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:fontFamily="@font/raleway"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:layout_marginTop="3dp"
             android:textColor="#363636"
             android:layout_marginStart="5dp"
@@ -34,7 +37,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:fontFamily="@font/raleway"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:layout_marginTop="3dp"
             android:textColor="#363636"
             android:layout_marginStart="5dp"
@@ -57,7 +60,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:fontFamily="@font/raleway"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:layout_marginTop="3dp"
             android:textColor="#363636"
             android:layout_marginStart="5dp"
