--- a/app/src/main/res/layout/content_restaurant_view.xml
+++ b/app/src/main/res/layout/content_restaurant_view.xml
@@ -421,6 +421,36 @@
 
                     </in.restroin.restroin.utils.MyGridView>
 
+                    <RelativeLayout
+                        android:layout_marginTop="8dp"
+                        android:id="@+id/restaurant_phone_layout"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_below="@+id/cusines_gridView_special"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:id="@+id/call_image"
+                            android:tint="@color/colorPrimary"
+                            android:src="@drawable/ic_call"
+                            android:layout_height="20dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:fontFamily="@font/raleway"
+                            android:text="9110466718"
+                            android:layout_toEndOf="@id/call_image"
+                            android:layout_marginStart="5dp"
+                            android:textColor="#000"
+                            android:layout_centerVertical="true"
+                            android:id="@+id/restaurant_phone"
+                            android:layout_height="wrap_content" />
+
+
+                    </RelativeLayout>
+
                 </RelativeLayout>
 
             </android.support.v7.widget.CardView>
